[package]
name = "unlatex-cli"
version = "0.1.0"
authors = ["Yunlong Feng <alongwyforever@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust bindings to unified-latex"
repository = "https://github.com/alongwy/unlatex"
documentation = "https://docs.rs/unlatex"
readme = "README.md"
keywords = ["LaTeX"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gumdrop = "0.8.0"
unlatex = { path = "../unlatex-core" }